--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -55,7 +55,7 @@
         <input type="password" name="password" id="password-input" placeholder="e.g., ••••••••••••">
     </div>
 
-    <button> Create New Account </button>
+    <button> Continue </button>
 </form>
 
 <form enctype="multipart/form-data" id="form">
