--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,67 +1,107 @@
-<style>
-    .profile {
-        background-image: url(https://cdn2.iconfinder.com/data/icons/flat-ui-4/100/Camera-512.png);
-        border-radius: 100%;
-        width: 80px;
-        height: 80px;
-        background-position: center;
-        background-color: rgba(0, 0, 0, 0.1);
-        background-size: 70%;
-        background-repeat: no-repeat;
-        margin: 0 auto 20px;
-        transition: all 0.3s ease-in-out;
-        transition-property: background-color, box-shadow;
-        cursor: pointer;
-    }
+<h1> Sign Up </h1>
 
-    .profile:hover {
-        background-color: rgba(0, 0, 0, 0.4);
-    }
-
-    .profile.cover {
-        background-color: rgba(255, 255, 255, 1);
-        background-size: cover;
-        box-shadow: 0px 0px 19px 0px rgba(0, 0, 0, 0.32);
-    }
-
-    #formBtn {
-        margin: 0 auto;
-        display: block;
-    }
-
-    #photo,
-    #submitBtn {
-        display: none;
-    }
-</style>
-
-<h2> Sign Up </h2>
-
-{{#if err}}
-<p class="error-message">
-    {{ err }}
-</p>
-{{/if}}
-
-<form action="/signup" method="post">
+<form action="/signup" method="post" id="form-step1">
 
     <div>
-        <label for="email-input"> Email </label>
-        <input type="email" name="email" id="email-input" placeholder="e.g., hola@hola.com">
+        <label for="signupEmailInput"> Email </label>
+        <input type="email" name="email" id="signupEmailInput" placeholder="e.g., hola@hola.com">
     </div>
 
     <div>
-        <label for="password-input"> Password </label>
-        <input type="password" name="password" id="password-input" placeholder="e.g., ••••••••••••">
+        <label for="signupPasswordInput"> Password </label>
+        <input type="password" name="password" id="signupPasswordInput" placeholder="">
     </div>
 
-    <button> Create New Account </button>
+    <div>
+        <label for="signupPasswordRepeatInput"> Repeat Password </label>
+        <input type="password" name="password" id="signupPasswordRepeatInput" placeholder="">
+    </div>
+
+    <button id="signupBtnStep1" type="button"> Continuar </button>
 </form>
 
-<form enctype="multipart/form-data" id="form">
-    <div id="addPhoto" class="profile"></div>
-    <input id="photo" type="file" name="photo">
-    <input id="submitBtn" type="submit">
+<form enctype="multipart/form-data" id="photoDogForm">
+    <div id="photoDogAvatar" class="profile"></div>
+    <input id="photoDogUrl" type="hidden" value="">
+    <input id="photoDogInputFile" type="file" name="photo">
+    <input id="photoDogSubmit" type="submit">
+</form>
+
+<form id="form-step3">
+    <label for="signupDogName">Nombre</label>
+    <input id="signupDogName" type="text" placeholder="Escribe el nombre de tu perr@">
+
+    <div>
+        <label>Es perro</label>
+        <input type="radio" name="signupDogSex" value="macho" checked>
+    </div>
+     <div>
+        <label>Es perra</label>
+        <input type="radio" name="signupDogSex" value="hembra">
+    </div>
+
+    <select id="signupDogBreed">
+        <option value="init">Selecciona una raza para tu perro</option>
+        <option value="caniche">Caniche</option>
+        <option value="chiuaua">Chiuaua</option>
+    </select>
+
+    <select id="signupDogAge">
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+        <option value="6">6</option>
+        <option value="7">7</option>
+        <option value="8">8</option>
+        <option value="9">9</option>
+        <option value="10">10</option>
+        <option value="11">11</option>
+        <option value="12">12</option>
+        <option value="13">13</option>
+        <option value="14">14</option>
+        <option value="15">15</option>
+        <option value="16">16</option>
+        <option value="17">17</option>
+        <option value="18">18</option>
+    </select>
+
+    <div>
+        <div>
+            <label>Pequeño</label>
+            <input type="radio" name="signupDogSize" value="small">
+        </div>
+        <div>
+            <label>Mediano</label>
+            <input type="radio" name="signupDogSize" value="medium" checked>
+        </div>
+        <div>
+            <label>Grande</label>
+            <input type="radio" name="signupDogSize" value="big">
+        </div>
+    </div>
+
+    <div>
+        <label>¿Cómo es con las personas?</label>
+        <select id="signupDogBehaviourPeople">
+            <option value="social">Social</option>
+            <option value="timido">Timido</option>
+            <option value="agresivo">Agresivo</option>
+        </select> 
+    </div>
+
+        <div>
+        <label>¿Cómo es con otros perros?</label>
+        <select id="signupDogBehaviourDogs">
+            <option value="social">Social</option>
+            <option value="timido">Timido</option>
+            <option value="agresivo">Agresivo</option>
+        </select> 
+    </div>
+
+    <button id="signupBtnStep3" type="button">Continuar</button>
+
 </form>
 
 <p>
@@ -72,79 +112,4 @@
 </p>
 
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<script>
-
-    const userData = {
-        email: '',
-        password: '',
-    };
-    const dogData = {
-        photo: '',
-        name: '',
-        age: '',
-        sex: '',
-        breed: '',
-        size: '',
-        behavior: { withDogs: '', withPeople: '' },
-    };
-
-    const emailExists = () => {
-
-        console.log(emailInput.value)
-        axios
-            .post('/manage/validate-user', { email: emailInput.value })
-            .then((response) => {
-                if (!response.data) {
-                    console.log(response.data)
-                } else {
-                    console.log('no existes');
-                    userData.email = emailInput.value;
-                }
-            });
-    }
-
-    const emailInput = document.getElementById('email-input');
-
-    emailInput.addEventListener('blur', emailExists)
-
-    const updateDogProfile = () => {
-
-        const fileToUpload = document.querySelector('#photo').files[0];
-
-        let config = {
-            headers: {
-                'Content-Type': 'multipart/form-data'
-            }
-        }
-
-        let data = new FormData()
-        data.append('image', fileToUpload);
-
-        axios.post('/manage/validate-dog-photo', data, config)
-            .then((response) => {
-                console.log(response)
-                const dogProfileUrl = response.data;
-                document.getElementById('addPhoto').style.backgroundImage = `url(${dogProfileUrl})`;
-                document.getElementById('addPhoto').classList.add('cover')
-
-            })
-            .catch(err => {
-                console.error("Image post failed: ", err)
-            })
-    };
-
-    const sendForm = (e) => {
-        e.preventDefault();
-        console.log('hola..')
-        updateDogProfile()
-    }
-
-    document.getElementById('addPhoto').addEventListener('click', () => {
-        document.getElementById('photo').click()
-    })
-    document.getElementById('form').addEventListener('submit', sendForm);
-    document.getElementById('photo').addEventListener('change', () => {
-        document.getElementById('submitBtn').click()
-    });
-
-</script>
+<script src="/javascripts/Signup.js"></script>
