--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -15,10 +15,10 @@
 
         <div>
             <label for="signupPasswordRepeatInput"> Repeat Password </label>
-            <input type="password" name="password" id="signupPasswordRepeatInput" placeholder="">
+            <input type="password" name="repeatPassword" id="signupPasswordRepeatInput" placeholder="">
         </div>
 
-        <button id="signupBtnStep1" type="button"> Continuar </button>
+        <button id="signupBtnStep1" type="button" disabled> Continuar </button>
     </form>
 </section>
 <section>
