signup, pending of others validations

--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -24,7 +24,6 @@
 <section>
     <form enctype="multipart/form-data" id="photoDogForm">
         <div id="photoDogAvatar" class="profile"></div>
-        <input id="photoDogUrl" type="hidden" value="">
         <input id="photoDogInputFile" type="file" name="photo">
         <input id="photoDogSubmit" type="submit">
     </form>
@@ -34,11 +33,11 @@
 
         <div>
             <label>Es perro</label>
-            <input type="radio" name="signupDogSex" value="macho" checked>
+            <input type="radio" name="signupDogSex" value="male" checked>
         </div>
         <div>
             <label>Es perra</label>
-            <input type="radio" name="signupDogSex" value="hembra">
+            <input type="radio" name="signupDogSex" value="female">
         </div>
     </form>
 </section>
