Added global user id variable to localStorage function (fuck yeah)

--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -46,7 +46,7 @@
         <select id="signupDogBreed">
             <option value="init">Selecciona una raza para tu perro</option>
             <option value="caniche">Caniche</option>
-            <option value="chiuaua">Chiuaua</option>
+            <option value="chihuahua">Chiuaua</option>
         </select>
 
         <select id="signupDogAge">
@@ -90,8 +90,8 @@
             <label>¿Cómo es con las personas?</label>
             <select id="signupDogBehaviorPeople">
                 <option value="social">Social</option>
-                <option value="timido">Timido</option>
-                <option value="agresivo">Agresivo</option>
+                <option value="shy">Timido</option>
+                <option value="agressive">Agresivo</option>
             </select> 
         </div>
 
