--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,7 +11,7 @@
 
 <script>
 
-    const session = localStorage;c
+    const session = localStorage;
 
     session.setItem('uUID', JSON.stringify(Math.random().toString(24) + new Date().toLocaleDateString("en-US")));
 
