--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
+  <header>
+    {{#if isCarerLoggedIn}}
+      <ul>
+        <li><a href="/carer/dashboard">Dashboard</a></li>
+        <li><a href="/carer/profile/{{currentUserInfo.carer._id}}">Edit profile</a></li>
+        <li><a href="/carer/reviews">View Reviews</a></li>
+      </ul>
+    {{/if}}
+  </header>
   <body>
     {{{body}}}
   </body>
