--- a/views/carer/login.hbs
+++ b/views/carer/login.hbs
@@ -16,6 +16,7 @@
         <input id="loginCarerBtnSubmit" type="submit" value="Iniciar sesión" disabled>
     </form>
     
+    <p>¿Aún no eres usuario? Regístrate <a href="/carer/signup">aquí</a></p>
 </section>
 
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
