--- a/views/carer/reviews.hbs
+++ b/views/carer/reviews.hbs
@@ -18,7 +18,7 @@
             <div>
                 <div style="width:100px;height:100px; backgroun-image: url('{{}}'); background-size: cover;"></div>
                 {{#each items}}
-                    <p>{{this.name}}</p>
+                    <p><{{this.name}}</p>
                     <p>{{this.score}}</p>>
                 {{/each}}
             </div>
