Created new branch, add map, geolocalization and searchbar

--- a/views/service.hbs
+++ b/views/service.hbs
@@ -10,6 +10,8 @@
 </div>
 {{/each}}
 
+<a href="/setup">Marca tu punto de encuentro</a>
+
 <script>
 
 
@@ -21,7 +23,7 @@
             const price = card.querySelector('.price').innerHTML
 
 
-            const contract = { userId: `{{currentUserInfo.user._id}}`, carerId: "", interval_time: interval, price: price, card_number: "" };
+            const contract = { userId: `{{currentUserInfo.user._id}}`, carerId: "", interval_time: interval, price: price, meeting_point:"", card_number: "" };
             localStorage.setItem('contract', JSON.stringify(contract));
 
         });
