--- a/public/stylesheets/_base.scss
+++ b/public/stylesheets/_base.scss
@@ -1,4 +1,2 @@
-$primary-color: #F97350;
-$secondary-color: #FAD06C;
-$beige-color: #F7F2E5;
-$dark-color: #B7AC9A;
+@import './base/reset';
+@import './base/colors';
