--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,10 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}}</title>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <header>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <div class="navbar-logo">
+                    <a href="/"><img src="images/logo.png" alt="letsdog"></a>
+                </div>
+                <div class="nav-tools-group">
+                    <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+        
+                    <div class="navbar-collapse offcanvas-collapse" id="offcanvas">
+                        <button class="navbar-toggler p-0 border-0 offcanvas-collapse_btnClose" type="button" data-toggle="offcanvas">
+                            <span aria-hidden="true">×</span>
+                        </button>
+                        <ul class="navbar-nav mr-auto">
+                            <li class="nav-item">
+                                <a class="nav-link" href="./register.html">Register</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./login.html">Login</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./contest.html">Wheel of Force!</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./warsiepedia.html">Warsiepedia</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./faqs.html">FAQS</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div>
+      </div>
+  </div>
     {{#if isCarerLoggedIn}}
       <ul>
         <li><a href="/carer/dashboard">Dashboard</a></li>
