Fixed dogId not appearing in Client Schema

--- a/views/setup.hbs
+++ b/views/setup.hbs
@@ -18,10 +18,10 @@
     .geocoder {
         position: absolute;
         z-index: 1;
-        width: 50%;
+        width: 70%;
         left: 50%;
-        margin-left: -25%;
-        top: 10px;
+        margin-left: -35%;
+        bottom: 20px;
     }
 
     .mapboxgl-ctrl-geocoder {
@@ -43,5 +43,5 @@
 <script src="./../javascripts/map.js">
 </script>
 <script>
-    
+
 </script>
