--- a/public/stylesheets/pages/_home.scss
+++ b/public/stylesheets/pages/_home.scss
@@ -18,4 +18,9 @@
         opacity: 0.3;
         z-index: 0;
     }
+
+    .home-buttons{
+        position: relative;
+        z-index:1;
+    }
 }
