--- a/views/carer/dashboard.hbs
+++ b/views/carer/dashboard.hbs
@@ -2,7 +2,7 @@
 <p>Hola {{currentUserInfo.carer.name}}!</p>
 
 <script src="http://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
-<script src="/javascripts/carer/Carer.js"></script>
+<script src="/javascripts/User.js"></script>
 <script>
     var socket = io('');
     const thecarer = new User('{{currentUserInfo.user._id}}');
