--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,7 +14,7 @@
         <div class="col-md-12">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="navbar-logo">
-                    <a href="/"><img src="images/logo.png" alt="letsdog"></a>
+                    <a href="/"><img src="/images/logo.png" alt="letsdog"></a>
                 </div>
                 <div class="nav-tools-group">
                     <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
@@ -26,6 +26,11 @@
                             <span aria-hidden="true">×</span>
                         </button>
                         <ul class="navbar-nav mr-auto">
+                          {{#if isCarerLoggedIn}}
+                            <li><a href="/carer/dashboard">Dashboard</a></li>
+                            <li><a href="/carer/profile/{{currentUserInfo.carer._id}}">Edit profile</a></li>
+                            <li><a href="/carer/reviews/{{currentUserInfo.carer._id}}">View Reviews</a></li>
+                          {{else}}
                             <li class="nav-item">
                                 <a class="nav-link" href="./register.html">Register</a>
                             </li>
@@ -41,6 +46,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="./faqs.html">FAQS</a>
                             </li>
+                          {{/if}}
                         </ul>
                     </div>
                 </div>
@@ -48,18 +54,13 @@
         </div>
       </div>
   </div>
-    {{#if isCarerLoggedIn}}
-      <ul>
-        <li><a href="/carer/dashboard">Dashboard</a></li>
-        <li><a href="/carer/profile/{{currentUserInfo.carer._id}}">Edit profile</a></li>
-        <li><a href="/carer/reviews">View Reviews</a></li>
-      </ul>
-    {{/if}}
+    
   </header>
   <body>
     {{{body}}}
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src="/javascripts/main.js"></script>
   </body>
 </html>
