--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,30 +1,41 @@
-<h2> Log In </h2>
+<main class="v-login">
+    <section class="subHeader">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="subHeader_content">
+                        <a href="/"><span class="icon-back_arrow"></span></a>
+                        <h1>Iniciar sesión</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="box-main">
+        <div class="login-content">
+          <form action="/login" method="post">
+            <div class="form-group compact hideAutocomplete">
+                <label for="signupEmailInput"> Email </label>
+                <input class="form-control" type="email" name="email" id="signupEmailInput">
+            </div>
 
-{{#if err}}
-  <p class="error-message">
-    {{ err }}
-  </p>
-{{/if}}
+            <div class="form-group compact hideAutocomplete">
+                <label for="signupPasswordInput"> Password </label>
+                <input class="form-control" type="password" name="password" id="signupPasswordInput">
+            </div>
+          </form>
+        </div>
+        {{#if err}}
+        <p class="invalid-feedback">
+          {{ err }}
+        </p>
+      {{/if}}
+      <div class="box-main_footer">
+        <a id="btnContinueSignup" class="btn btn-primary btn-lg">Inciniciar sesión</a>
+        <p class="small-link">No estamos registrados <a href="/signup">Registrarse</a></p>
+      </div>
 
-<form action="/login" method="post">
-  <div>
-    <label for="email-input"> Email </label>
-    <input type="email" name="email" id="email-input"
-      placeholder="your email here">
-  </div>
+    </section>
+</main>
 
-  <div>
-    <label for="password-input"> Password </label>
-    <input type="password" name="password" id="password-input"
-      placeholder="e.g., ••••••••••••">
-  </div>
-
-  <button> Log In </button>
-</form>
-
-<p>
-  Don't have an account?
-  <a href="/signup">
-    Create an account.
-  </a>
-</p>
+<script src="/javascripts/Form.js"></script>
