--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,6 @@
 <main class="v-home">
     <section class="home-buttons">
         <a href="/login" class="btn btn-primary btn-lg">Inicia sesión</a>
+        <a href="/signup" class="btn btn-secondary btn-lg">Regístrate</a>
     </section>
 </main>
