--- a/public/stylesheets/components/_buttons.scss
+++ b/public/stylesheets/components/_buttons.scss
@@ -1,9 +1,19 @@
 .btn {
-    
+    width: 100%;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
     border: none;
+    font-size: 1.6rem;
 
     &.btn-primary{
         background-color: $primary-color;
+        color: #fff;
+    }
+
+    &.btn-secondary{
+        background-color: $secondary-color;
+        color: $primary-color;
     }
 
     &.btn-lg{
@@ -12,4 +22,17 @@
         height: 60px;
     }
 
+}
+
+.small-link{
+    width: 100%;
+    text-align: center;
+    font-size: 1.3rem;
+    margin-top: 15px;
+
+    a{
+        text-decoration: none;
+        color: $primary-color
+    }
+    
 }
