--- a/public/stylesheets/pages/_home.scss
+++ b/public/stylesheets/pages/_home.scss
@@ -1,8 +1,10 @@
 .v-home{
-    height: calc(100vh - #{$headerheight});
+    min-height: calc(100vh - #{$headerheight});
     background-color: $beige-color;
     position: relative;
     padding: 24px;
+    display: flex;
+    align-items: flex-end;
 
     &:before{
         content: "";
@@ -11,16 +13,23 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-image: url(../../images/bg_home.jpg);
+        background-image: url(../../images/bg_home_mobile.jpg);
         background-size: cover;
         background-position: left center;
         background-repeat: no-repeat;
-        opacity: 0.3;
+        opacity: 0.7;
         z-index: 0;
     }
 
     .home-buttons{
         position: relative;
         z-index:1;
+        width: 100%;
+        padding-bottom: 32px;
+
+        .btn{
+            margin-top: 16px;
+            box-shadow: 0px 0px 14px -4px rgba(0,0,0,0.49);
+        }
     }
 }
