--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -66,6 +66,51 @@ select {
     transition-duration: 0.01ms !important;
     scroll-behavior: auto !important; } }
 
+body,
+html {
+  font-family: 'Rubik', sans-serif;
+  font-size: 62.5%; }
+
+h1 {
+  font-size: 2rem;
+  margin: 0; }
+
+@font-face {
+  font-family: 'icomoon';
+  src: url("../../fonts/icomoon.eot?hpm04z");
+  src: url("../../fonts/icomoon.eot?hpm04z#iefix") format("embedded-opentype"), url("../../fonts/icomoon.woff2?hpm04z") format("woff2"), url("../../fonts/icomoon.ttf?hpm04z") format("truetype"), url("../../fonts/icomoon.woff?hpm04z") format("woff"), url("../../fonts/icomoon.svg?hpm04z#icomoon") format("svg");
+  font-weight: normal;
+  font-style: normal;
+  font-display: block; }
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; }
+
+.icon-back_arrow:before {
+  content: "\e900"; }
+
+.icon-bone:before {
+  content: "\e901";
+  color: #f97350; }
+
+.icon-dot-slide-dog:before {
+  content: "\e902";
+  color: #f97350; }
+
+.icon-logo:before {
+  content: "\e903";
+  color: #f97350; }
+
 header {
   background-color: #FAD06C;
   height: 56px;
@@ -103,11 +148,37 @@ header {
     visibility: visible;
     z-index: 1; } }
 
+.subHeader {
+  display: flex;
+  justify-content: space-between;
+  height: 56px;
+  align-items: center; }
+  .subHeader_content {
+    display: flex;
+    justify-content: space-between;
+    position: relative; }
+    .subHeader_content h1 {
+      width: 100%;
+      text-align: center;
+      font-size: 2rem; }
+    .subHeader_content a {
+      color: white;
+      position: absolute;
+      left: 0;
+      top: 50%;
+      transform: translateY(-50%);
+      font-size: 1.6rem; }
+
+main {
+  background-color: #FAD06C; }
+
 .v-home {
-  height: calc(100vh - 56px);
+  min-height: calc(100vh - 56px);
   background-color: #F7F2E5;
   position: relative;
-  padding: 24px; }
+  padding: 24px;
+  display: flex;
+  align-items: flex-end; }
   .v-home:before {
     content: "";
     position: absolute;
@@ -115,23 +186,246 @@ header {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url(../../images/bg_home.jpg);
+    background-image: url(../../images/bg_home_mobile.jpg);
     background-size: cover;
     background-position: left center;
     background-repeat: no-repeat;
-    opacity: 0.3;
+    opacity: 0.7;
     z-index: 0; }
   .v-home .home-buttons {
     position: relative;
-    z-index: 1; }
+    z-index: 1;
+    width: 100%;
+    padding-bottom: 32px; }
+    .v-home .home-buttons .btn {
+      margin-top: 16px;
+      box-shadow: 0px 0px 14px -4px rgba(0, 0, 0, 0.49); }
+
+.v-signup {
+  min-height: calc(100vh - 56px);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; }
+  .v-signup .box-main {
+    min-height: calc(100vh - 150px);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; }
+  .v-signup .splide {
+    display: flex;
+    flex-direction: column; }
+    .v-signup .splide__slide {
+      height: auto !important; }
+    .v-signup .splide__pagination {
+      order: 0;
+      position: relative;
+      bottom: auto; }
+      .v-signup .splide__pagination li {
+        position: relative;
+        min-width: 45px;
+        display: flex;
+        justify-content: center;
+        flex-flow: column; }
+      .v-signup .splide__pagination__page {
+        background-color: transparent;
+        margin-top: 20px;
+        position: relative; }
+        .v-signup .splide__pagination__page:before {
+          content: '\e902';
+          font-family: 'icomoon';
+          font-size: 2rem;
+          position: absolute;
+          top: -30px;
+          left: 50%;
+          transform: translateX(-50%);
+          color: #B7AC9A; }
+        .v-signup .splide__pagination__page.is-active {
+          transform: none;
+          background: #F97350; }
+          .v-signup .splide__pagination__page.is-active:before {
+            color: #F97350; }
+    .v-signup .splide__track {
+      order: 1; }
+  .v-signup .avatar {
+    margin-top: 20px; }
+
+.v-login {
+  min-height: calc(100vh - 56px);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; }
+  .v-login .box-main {
+    min-height: calc(100vh - 150px);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; }
 
 .btn {
-  border: none; }
+  width: 100%;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  font-size: 1.6rem; }
   .btn.btn-primary {
-    background-color: #F97350; }
+    background-color: #F97350;
+    color: #fff; }
+  .btn.btn-secondary {
+    background-color: #FAD06C;
+    color: #F97350; }
   .btn.btn-lg {
     border-radius: 30px;
     padding: 20px 30px;
     height: 60px; }
+
+.small-link {
+  width: 100%;
+  text-align: center;
+  font-size: 1.3rem;
+  margin-top: 15px; }
+  .small-link a {
+    text-decoration: none;
+    color: #F97350; }
+
+.box-main {
+  padding: 28px;
+  border-radius: 28px 28px 0 0;
+  background-color: white;
+  width: 100%; }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 30px white inset !important;
+  -webkit-color: white !important; }
+
+.form-group {
+  position: relative; }
+  .form-group label {
+    font-size: 1.4rem;
+    color: #B7AC9A;
+    font-weight: 500; }
+  .form-group input,
+  .form-group select {
+    font-weight: 300; }
+  .form-group.compact {
+    margin-bottom: 20px; }
+    .form-group.compact label {
+      font-size: 1.4rem;
+      position: absolute;
+      bottom: 4px;
+      left: 0px;
+      transition: all 0.3s ease-out; }
+    .form-group.compact.is-filled label, .form-group.compact.is-focus label {
+      bottom: 24px;
+      color: #B7AC9A;
+      font-size: 1.2rem;
+      font-weight: 300; }
+    .form-group.compact .form-control {
+      background-color: transparent;
+      border-radius: 0;
+      padding: 0;
+      font-size: 1.6rem;
+      appearance: none;
+      border: 0;
+      border-bottom: 1px solid #ccc;
+      height: auto;
+      padding-top: 25px;
+      line-height: 1;
+      padding-bottom: 7px; }
+      .form-group.compact .form-control.is-valid, .form-group.compact .form-control.is-invalid {
+        border-bottom-color: #28a745;
+        background-position: right 27px; }
+      .form-group.compact .form-control.is-invalid {
+        border-bottom-color: #dc3545; }
+    .form-group.compact.hideAutocomplete:before {
+      content: "";
+      width: 100%;
+      height: calc(100% - 1px);
+      background-color: white;
+      position: absolute;
+      pointer-events: none; }
+  .form-group .invalid-feedback {
+    font-size: 1.3rem;
+    padding-top: 5px;
+    position: absolute;
+    border: 0;
+    left: 0;
+    width: 100%;
+    bottom: -22px; }
+  .form-group .custom-select {
+    height: 40px;
+    font-size: 1.4rem;
+    border: 0;
+    border-bottom: 1px solid #ccc;
+    border-radius: 0;
+    padding-left: 0;
+    padding-right: 0;
+    margin-bottom: 16px; }
+
+.wrapper-big-radio {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 1px; }
+  .wrapper-big-radio .big-radio {
+    width: calc(50% - 10px);
+    position: relative; }
+    .wrapper-big-radio .big-radio label,
+    .wrapper-big-radio .big-radio input {
+      border-radius: 15px;
+      height: 132px;
+      background-color: #F7F2E5;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 1.6rem;
+      color: #B7AC9A; }
+    .wrapper-big-radio .big-radio label {
+      position: absolute;
+      z-index: 1;
+      pointer-events: none;
+      top: 0;
+      left: 0;
+      transition: all 0.3s ease-in-out; }
+    .wrapper-big-radio .big-radio input:focus, .wrapper-big-radio .big-radio input:checked, .wrapper-big-radio .big-radio input:hover {
+      outline: 0;
+      border: 0;
+      box-shadow: none; }
+    .wrapper-big-radio .big-radio input:checked + label {
+      background-color: #FAD06C;
+      color: #fff; }
+
+.form-avatar {
+  margin-top: 20px;
+  margin-bottom: -20px; }
+  .form-avatar input,
+  .form-avatar button {
+    display: none; }
+  .form-avatar .avatar {
+    background-image: url(https://cdn2.iconfinder.com/data/icons/flat-ui-4/100/Camera-512.png);
+    border-radius: 100%;
+    width: 120px;
+    height: 120px;
+    background-position: center;
+    background-color: rgba(0, 0, 0, 0.1);
+    background-size: 70px 70px;
+    background-repeat: no-repeat;
+    margin: 0 auto 20px;
+    transition: all 0.3s ease-in-out;
+    transition-property: background-color, box-shadow;
+    cursor: pointer; }
+    .form-avatar .avatar.avatar-banner {
+      width: 400px;
+      height: 200px;
+      border-radius: 5px; }
+    .form-avatar .avatar:hover {
+      background-color: rgba(0, 0, 0, 0.4); }
+    .form-avatar .avatar.cover {
+      background-color: white;
+      background-size: cover;
+      box-shadow: 0px 0px 19px 0px rgba(0, 0, 0, 0.32); }
 
 /*# sourceMappingURL=style.css.map */
